K8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: data-tier
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-tier
