K8s/django-deployment.yml
# k8s/django-deployment.yml

# --- The Service for the Django App ---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: app-tier
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
